HotSpot 算法实现基本